Fix stream pane transition on mobile

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -303,6 +303,9 @@
         border-bottom: 1px solid transparent
         themed border-bottom-color shade4
 
+        &.shrunk
+            margin-left: 0
+
     #gotv-container .gotv-layout .chat-pane
         width: 100vw
         flex: 1 1 auto
